# BIMMERAH

./: .gitignore  BIMMERAH_PROGRESS.md  GITHUB_SETUP_INSTRUCTIONS.md  INSTALLATION_STATUS.md  PROJECT_STATUS.md  QUICK_START.txt  README.md  README_TESTING.md  build_apk.py  build_apk_helper.py  buildozer.spec  cleanup.py  generate_apk.py  github_setup_interactive.py  install_app.bat  install_from_github.py  install_on_device.py  main.py  pair_and_connect.py  push_to_github.py  pyproject.toml  quick_connect.bat  requirements.txt  setup_cloud_build.py  setup_github_repo.py  wifi_debug.bat  wifi_debug.py
.github/workflows/: build-apk-docker.yml  build-apk.yml
docs/: APK_BUILD_GUIDE.md  WIFI_DEBUGGING_GUIDE.md
src/: __init__.py  app.py
src/core/: __init__.py  bluetooth.py  diagnostics.py  wifi.py
src/ui/: __init__.py  screens.py
src/utils/: __init__.py  helpers.py
tests/: test_core.py
